fixed svg not appearing on safari + chrome

--- a/assets/styles/utilities/_general.scss
+++ b/assets/styles/utilities/_general.scss
@@ -15,5 +15,8 @@ img {
     width: 100%;
 }
 svg {
-	vertical-align: middle;
+    vertical-align: middle;
+    height: auto;
+    width: 100%;
+    display: block;
 }
